--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build src/index.js --license licenses.txt"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@vercel/ncc": "^0.34.0",
     "isomorphic-fetch": "^3.0.0"
   }
 }
